Revert "Add SplashScreen prototype."
This reverts commit 7899beb84bbf5b12b264a571e011b8660c995510

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,4 @@
 <resources>
-    <string name="app_name">SimpliSell</string>
+    <string name="app_name">CrazyEights</string>
     <string name="welcome">WELCOME!</string>
-    <string name="title_activity_splash_screen">SplashScreen</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="copyrightWarning"> © 2019 Crazy Eights</string>
-
-
 </resources>
