--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">SimpliSell</string>
+
+    <string name="title_activity_splash_screen">SplashScreen</string>
+
+    <string name="login">Login</string>
+
+    <string name="email">  Email Address</string>
+
+    <string name="password">  Password</string>
+
+    <string name="confirmpassword">  Confirm Password</string>
+
+    <string name="Useresname">  Name</string>
+
+    <string name="signup">  Sign Up</string>
+
+    <string name="or">OR</string>
+
+    <string name="copyright">© 2019 Crazy Eights</string>
+
+    <string name="signupTwo">Sign Up</string>
+
+    <string name="backToLogin">Back To Login</string>
+
+
 </resources>
