Revert "Revert "Add functionality to sort button.""
This reverts commit c7c9c4a1793bdebdb264eaffe72bc59097f5cf57

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
 
     <string name="sort">Sort</string>
 
+    <string name="menu">Menu</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
