Add UI for view users own Ads

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
 
     <string name="delete">Delete</string>
 
+    <string name="myAds">My Ads</string>
+
     <string name="save">Save</string>
 
     <!-- TODO: Remove or change this placeholder text -->
