Add UI for profile pic and edit contact information.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
 
     <string name="resetPassword">Reset Password</string>
 
+    <string name="email"> EMAIL</string>
+
+    <string name="phoneNumber">  PHONE NUMBER</string>
+
     <string name="username">FIRST AND LAST NAME</string>
 
     <string name="signup">SIGN UP</string>
@@ -81,7 +85,11 @@
 
     <string name="myAds">My Ads</string>
 
-    <string name="save">Save</string>
+    <string name="photo">PHOTO</string>
+
+
+
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
