--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,12 +87,9 @@
 
     <string name="photo">PHOTO</string>
 
+    <string name="save">SAVE</string>
 
-
-
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="changePasswoed">CHANGE PASSWORD</string>
 
 
 </resources>
