User Can now upload a profile Pic.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
 
     <string name="myAds">My Ads</string>
 
-    <string name="photo">PHOTO</string>
+    <string name="photo">CAPTURE PHOTO</string>
 
     <string name="save">SAVE</string>
 
