--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string-array name = "security_questions">
+        <item>Select a security question</item>
+        <item>What is your favourite color?</item>
+        <item>What is your mother\'s maiden name?</item>
+    </string-array>
 
 </resources>
