Create class for an admin to see reported ads

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,6 @@
     </string-array>
 
     <string name="report_ad">Report Ad</string>
+
+    <string name="reported_ads">Reported Advertisements</string>
 </resources>
