Add functionality to filter ads by Ad type.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,10 @@
 
     <string name="category">Category</string>
 
+    <string name="type">Type</string>
+
+    <string name="allType">All Type</string>
+
     <string name="edit">Edit</string>
 
     <string name="delete">Delete</string>
