Add functionality to repost an ad. The method repostAd(adID) within the AdPersistenceHSQLDB needs to be implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,8 @@
 
     <string name="delete">Delete</string>
 
+    <string name="repost">Repost</string>
+
     <string name="myAds">My Ads</string>
 
     <string name="photo">CAPTURE PHOTO</string>
