--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
 
     <string name="type">Type</string>
 
-    <string name="allType">All Type</string>
+    <string name="filter">Filter</string>
 
     <string name="edit">Edit</string>
 
