--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,12 @@
 
     <string name="changePassword">CHANGE PASSWORD</string>
 
+    <string name="fullName">Full Name: </string>
+
+    <string name="adOwnerEmail">Email: </string>
+
+    <string name="adOwnerPhoneNumber">Phone Number: </string>
+
     <string-array name = "security_questions">
         <item>Select a security question</item>
         <item>What is your favourite color?</item>
